# mathematische-texte

./: !37 Kosmologie.py  !37EABC.TEX  # #Energiedoku: Bamberger Master-Skript   # Arithmetische Vakuumpolarisation:.sty.sty  # SageMath 10.py  # SageMath code.py  .gitattributes  .gitignore  1.tex  1000 15er  100er  10K Quanten.py  110er  130er  137.py  13erKollaps.py  2 Vierlingsniveaus Matrix.py  2-3-5.tex  2.tex  20 10  20 10 normal  20 1000er  200er  25 2000  2hdm_stability_final.bib  2hdm_stability_final.tex  2hdm_stability_revised.bib  2hdm_stability_revised.tex  3 4er Primzahlfamilien.tex  3 4ierlinge-standalone.html  3 4ierlinge.js  30er  4 Anker.tex  4 Zeta.py  4D_Messraum.tex  4Kepler.py  50 50 prim  5005vorläufig.tex  50er  575961 Final.ipynb  (+1315 more)
Betrtrand_Lean/: BetrtrandLean.lean  Main.lean  README.md  lake-manifest.json  lakefile.toml
CSV/: AlfaFit_850k___Kurzcheck.csv  Erste_12_Eigenwerte___ohne_mit__Toy__Morley-Phasen_auf_10__Kanten.csv  Ikosaeder_Refinement___Spektrum_Summary__L0_L3_.csv  Level-1_Walter-Refined_Mesh___Spektrenvergleich__erste_25_.csv  Level-1_Walter-Refined_Mesh___Stats.csv  Level-1__Fit_an_Kugelspektrum_l_l_1____Stats.csv  Walter-Refined_Mesh___Parent-Face_Walter-Fractions.csv  alphafit_smoketest_v3.csv  energiedoku_viertupel_gefiltert.csv  icosa_refinement_mesh_signatures.csv  icosahedron_refinement_first25_eigenvalues.csv  icosahedron_spectrum_clusters.csv  landau_summary.csv  mod12_single_module_by_value.csv  quadratfreie_tupel_mod12.csv  test_spheres_summary.csv  test_viertupel.csv  walter_refined_mesh_spectra_comparison_first30.csv  (+1 more)
(+131 files in other folders)
