[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "basel-with-a"
version = "0.1.0"
description = "Pure Python utilities migrated from SageMath notebook experiments."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Thomas Hoffbauer" }
]

[project.scripts]
basel-with-a = "basel_with_a.cli:main"
susy-fourlinge = "susy_fourlinge.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
